# compass-workers

./: .dockerignore  .gitignore  ARCHITECTURE.md  README.md  Signal_Metrics_Catalog.xlsx  requirements.txt  test_invoice.txt
ETL_clickhouse/: .env.example  checkpoint.py  config.py  mapper.py  run.py  worker.py
PHI-PII-De-Identification--Default/tests/: fixtures.py  test_cli.py
PII/: README.md  pyproject.toml  requirements.txt  test.txt
PII/deidentifier/: __init__.py  __main__.py  api.py  cli.py  config.py  entities.py  policy_evaluator.py  result.py
PII/deidentifier/policies/: default.yaml
PII/deidentifier/presidio/: __init__.py  engine.py  recognizers.py
PII/deidentifier/recognizers/: __init__.py  regex_recognizer.py
PII/docs/diagrams/: architecture.mmd  architecture_v2.mmd  safety_worker_flow.mmd
PII/eval/: evaluate.py  output.json  test.txt
PII/examples/: example_usage.py
PII/tests/: test_presidio_engine.py  test_step1_compact_dates.py  test_step2_gender.py  test_step3_combo_rules.py  test_step4_engine_analyze.py
clickhouse-infra/: docker-compose.yml  otel-collector-config.yaml
compass-workers/: .env.example  Dockerfile  Dockerfile.cost  Dockerfile.performance  Dockerfile.quality  Dockerfile.reconciler  Dockerfile.safety  build-all.ps1  run_worker.py
compass-workers/compass_worker/: __init__.py  base.py  catalog.py  checkpoint.py  config.py  observability.py  partition.py  patterns.py  pricing.py  reconciler.py  spec.py  toggle_cache.py
docs/: ARCHITECTURE.md  COVERAGE.md  cost.md  insights-explained.md  insights.md  performance.md  quality.md  reconciler.md  safety.md
docs/insights/: architecture.mmd  dataflow.mmd  engine-llm.md  engine-llm.mmd  entities.mmd
infra/: .env.example  README.md  docker-compose.yml
infra/data/: README.txt
infra/k8s/: 00_namespace.yaml  10_configmap.yaml  11_secret.yaml  (+7 more)
output_schema_validation-logs-tracing/: .env.example  .gitignore  main.py
quality/: QUALITY_LENS_PRESENTATION.md  README.md  pyproject.toml
quality/configs/: runtime.yaml
quality/eval/: benchmark_model.py  benchmark_relevance.py  benchmark_summeval.py
quality/quality_observability/: __init__.py  cli.py  config.py  constants.py  download.py  models.py  pipeline.py  scorer.py  text.py
signal-workers/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.quality  Dockerfile.safety  README.md  build-all.ps1  requirements.txt  run_worker.py  show_specs.py  validate_performance.py
toxicity/: README.md  pyproject.toml
(+93 files in other folders)
